<resources>
    <string name="app_name">PhoneBook</string>
    <string name="action_settings">Settings</string>
    <string name="edit_contact">Edit Contacts</string>
    <string name="delete_contact">Delete Contacts</string>


    <string name="label_name">Name: </string>
    <string name="label_address">Address: </string>
    <string name="label_phone">Phone: </string>

    <string name="label_home">Home: </string>
    <string name="label_work">Work: </string>
    <string name="label_mobile">Mobile: </string>

    <string name="label_birthday">Birthday: </string>
    <string name="label_Company">Company: </string>
    <string name="label_email">E-Mail: </string>

    <string name="label_accept">Accept </string>
    <string name="label_reject">Reject </string>

    <string name="tab_text">Tab! </string>

    <string name="search_title">search! </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
